Add a //registry command to search registries